STREAM: 2.0

What's new in this drop (since 0.9)
==================================================================================
  * JCK1.3a compliant. 
  * All messages have been externalized. 
  * Added 2 new APIs on JavaConventions: 
         - IJavaModelStatus validateClasspath(IJavaProject project, IClasspathEntry[] classpath, IPath outputLocation) 
         - IJavaModelStatus validateClasspathEntry(IJavaProject project, IClasspathEntry entry, boolean checkSourceAttachment) 
 * Ant Eclipse compiler task added (org.eclipse.jdt.core.ant.Jdtcom)
 * Assertions support enabled: by default the compiler is 1.3 compliant, but it can optionally be turned into source 1.4 mode cf. JavaCore options.

PRs Fixed in this Release (since 1.0NL stream)
==================================================================================
1GHU6O5: ITPJCORE:WINNT - RMIC test fail
1GHH6O7: ITPJCORE:ALL - Need to tune the exception analysis for AssertStatement
1GHUW7T: ITPJCORE:WIN2000 - Build Problem
1GHU4PK: ITPJCORE:WINNT - NoSuchMethodError when running program
1GHONAX: ITPJCORE:WIN2000 - Compiler uses different name lookup for refactoring
1GEJYAJ: ITPJCORE:WIN2000 - Compiler - Binding of QualifiedNameReference is null
1GHFHWR: ITPJCORE:ALL - Assertions: CodeAssist and Selection need to be updated
1GHFHXG: ITPJCORE:ALL - Assertions: Add optional warning on assert identifier
1GCZ9VM: ITPJCORE:WIN2000 - DCR - Compiler - Batch compiler should be API
1GHO6QR: ITPJCORE:WINNT - Code Assist - no method completion when return type is secondary one
1GH0AU7: ITPJCORE:ALL - Eval - VerifyError in scrapbook page
1GH2R62: ITPJCORE:WIN2000 - Typo in progress message
1GGYL32: ITPJCORE:ALL - Default supertypes are not visible when qualified
1GDFJK0: IVJIDT:WIN2000 - Using 'synchronized' produces invalid exception table values in class, causes "Illegal exception table range" exception, VAJ 3.5+ 
1GGAK6G: ITPJCORE:ALL - Incorrect javadoc comment in JavaElement 